# armory-library

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CNAME  LICENSE  Makefile  README.md  dev-install.sh  environment.yaml  junk.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-weekly-gpu.yml  ci.yml  ci_test.yml  cuda-gpu.yml  release.yml
.gitlab/: .gitlab-ci.yml
armory/: __main__.py  core.py
armory/cli/: __init__.py  command.py  dispatcher.py  run.py
armory/commands/: __init__.py  __main__.py  ephemeral.py  run.py
armory/eval/: evaluator.py
armory/scenarios/: main.py
docker/: Dockerfile-armory  build-base.sh
docs/: CONTRIBUTING.md  diving_deeper.ipynb  experiment_tracking.md  exporting_data.md  getting_started.ipynb  getting_started.md  index.md  new_dataset_to_armory.md  new_model_to_armory.md  open-source-strategy.md  requirements.txt
docs/developers/: README.md  defense_leak.md  development-environment.md  development_environment.md  new_dataset_to_armory.md  new_model_to_armory.md  setup.md  style.md  troubleshooting.md  workflow.md
docs/docker/: Dockerfile-armory
docs/original/: metrics.md
docs/reference/: data.md  dataset.md  engine.md  evaluation.md  export.md  labels.md  metric.md  model.md  profiler.md  results.md  task.md  track.md  transforms.md  utils.md
docs/scenario_configs/: README.md
docs/slides/: README.md  increment1-review-2023-06-27.md  sample.md  (+6 more)
examples/: Makefile  README.md  armory_colab_example.ipynb  pyproject.toml
examples/notebooks/: LLM_attack_belief_manipulation.ipynb  api-walkthrough.ipynb  armory_colab_defended.py  armory_colab_defended_example.ipynb  armory_colab_example.ipynb  armory_evaluation_walkthrough.ipynb  armory_wp_evaluation.ipynb  ast_file.py  eurosat_model_eval_09102023.csv  food101_example.ipynb  image_classification_food101.ipynb  import_experimental.ipynb  incr2honaker.ipynb  jatic-food-track-demo.ipynb  jatic_toolbox-image-classification-demo.ipynb  linear_regression_incr2.ipynb  model_training.ipynb  new_image_classification_dataset.ipynb  new_object_detection_dataset.ipynb  object_detection_license_plates.ipynb  object_detection_license_plates_saliency_maps.ipynb  pokemon_example.ipynb  twosix-increment2-demo.ipynb  twosix-increment3-demo.ipynb
examples/src/armory/examples/image_classification/: cifar10_jatic_toolbox.py  food101.py  food101_armory.py  food101_armory_output.txt  food101_huggingface.py  food101_no_armory.py  food101_no_armory_output.txt  food101_pgd_transferability.py  food101_torchvision.py  huggingface_food101.py  imagenet1k_resnet34_pgd.py  kaludi_food_category_pgd.py  mnist_vit_pgd.py  pokemon_pgd.py
examples/src/armory/examples/image_classification/eurosat_precomputed_pgd/: create_adversarial_eurosat.py  create_finetuned_model.py  evaluation.py  run_against_pregenerated.py  run_all.sh  run_matrix.py  run_with_attack.py
examples/src/armory/examples/image_classification/food101/: food101_pgd.py
examples/src/armory/examples/image_classification/icon_classifier/: evaluation.py  icon645.py  vit.py
examples/src/armory/examples/image_classification/torchvision/: README.md  imagenet_classes.json  imagenet_tst.py  imgntst.py  matrix_tv.py  run_matrix.py  tv_alex.ipynb
examples/src/armory/examples/llm/: boolq_deberta.py  boolq_litgpt_llama.py  jailbreak_litgpt_llama.py  llm_pgd.py
examples/src/armory/examples/object_detection/: coco_fasterrcnn_resnet50.py  coco_fasterrcnn_resnet50_robustdpatch.py  coco_yolos_robustdpatch.py  license_plates_yolos.py  license_plates_yolov5.py  license_plates_yolov5_robustdpatch.py  visdrone_yolov5.py  visdrone_yolov5_robustdpatch.py  wp_evaluation.py  wp_yolov4.py
examples/src/armory/examples/object_detection/coco_precomputed_patch/: .gitignore  create_adversarial_dataset.py  evaluation.py  run_against_pregenerated.py  run_with_attack.py
examples/src/armory/examples/object_detection/datasets/: visdrone.py
examples/src/armory/examples/object_detection/xview/: xview_fasterrcnn_robustdpatch.py
examples/src/armory/examples/question_answering/: boolq_deberta.py
examples/src/armory/examples/utils/: args.py  display.py
examples/src/charmory_examples/: cifar_example.py  cifar_example_2.py  display.py  food101_jatic_example.py  food101_lightning_example.py  imagenet1k_example.py  jatic_cifar_example.py  jatic_cifar_example_2.py  jatic_hf_example.py  jatic_image_classification_example.py  jatic_image_classification_lightning_example.py  jatic_object_detection_lightning_example.py  jatic_tv_example.py  novel_dataset.py  pokemon_example.py  pokemon_training.py  torch_lightning_test.py  xview_2.py  xview_example.py  xview_lightning.py  xview_train_orginial.py  xview_training.ipynb  xview_training_lightning.ipynb
examples/src/charmory_examples/image_classification/: cifar10_jatic_toolbox.py  imagenet1k_resnet34_pgd.py  kaludi_food_category_pgd.py  mnist_vit_pgd.py
examples/src/charmory_examples/image_classification/eurosat_precomputed_pgd/: .gitignore  create_adversarial_eurosat.py  create_finetuned_model.py  evaluation.py  run_against_pregenerated.py  run_with_attack.py
examples/src/charmory_examples/object_detection/: coco_fasterrcnn_resnet50_robustdpatch.py  coco_yolos_example.py  coco_yolos_robustdpatch.py  license_plates_yolov5_robustdpatch.py  yolov5_license_plates.py
examples/src/charmory_examples/object_detection/coco_precomputed_patch/: create_adversarial_dataset.py  evaluation.py  run_against_pregenerated.py  run_with_attack.py
examples/src/charmory_examples/object_detection/xview/: test_xview_model.py  train_xview_model.py  xview_fasterrcnn_robustdpatch.py
matrix/: .gitignore  README.md  pyproject.toml
report/: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_attack_object.py  test_dataset_object.py  test_evaluation.py  test_experiment.py
tests.orig/: conftest.py  test_downloads.py
tools/: Dockerfile.debug  config-output.txt  flake8.cfg  json_comprehension.py  mkdocs.yml  pre-commit.sh
tutorials/: api-walkthrough.ipynb
(+201 files in other folders)
