[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
requires-python = ">=3.8"

name = "armory-suite"
version = "0.0.0"

dependencies = [
    #
    # Build
    #
    "setuptools_scm",
    "hatch",
    "wheel",

    #
    # Test
    #
    "pytest",

    #
    # Lint
    #
    "black[jupyter]",
    "isort",
    "flake8",
    "pre-commit",

    #
    # Docs
    #
    "mkdocs",
    "mkdocstrings",
    "mkdocs-exclude",
    "mkdocs-material",

    #
    # Other
    #
    "ipywidgets",
]


[tool.pytest.ini_options]
addopts = "-ra -q"
log_level = "ERROR"
testpaths = ["library/tests"]
log_cli = true
filterwarnings = []
markers = [
    "slow",       # This test is slow
    "online",     # This test needs open internet access
    "end_to_end", # Full End to End Test (typically slow)
    "unit",       # These are Unit Tests (fast and lightweight)
]


[tool.isort]
profile = "black"
force_sort_within_sections = true
