[build-system]
build-backend = "hatchling.build"

# hatchling 1.19 prevents installation of a pyproject with no files included
# because this package currently has no files, but does include helpful
# dependencies and scripts, we had to pin to 1.19 on 12-dec-2023 as a
# workaround. This can possibly be unpinned in the furture.
# cf. https://github.com/pypa/hatch/issues/1113
requires = ["hatchling<=1.18.0"]


[project]
requires-python = ">=3.8"

name = "armory-suite"
version = "0.0.0"

dependencies = [
    #
    # Build
    #
    "setuptools_scm",
    "hatch",
    "wheel",

    #
    # Test
    #
    "pytest",

    #
    # Lint
    #
    "black[jupyter]",
    "isort",
    "flake8",
    "pre-commit",

    #
    # Docs
    #
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-exclude",
    "mkdocs-material",

    #
    # Other
    #
    "taskipy",
    "ipykernel",
    "ipywidgets",
]


[tool.pytest.ini_options]
addopts = "-ra -q"
log_level = "ERROR"
testpaths = ["library/tests", "matrix/tests"]
log_cli = true
filterwarnings = []
markers = [
    "slow",       # This test is slow
    "online",     # This test needs open internet access
    "end_to_end", # Full End to End Test (typically slow)
    "unit",       # These are Unit Tests (fast and lightweight)
]


[tool.isort]
profile = "black"
force_sort_within_sections = true
src_paths = ["library/src"]


[tool.taskipy.tasks]
docs = "python -m mkdocs build --verbose --config-file ./tools/mkdocs.yml"
lint = "python -m pre_commit run --all-files"
test = "python -m pytest -m unit"
