[project]
requires-python = ">=3.8"

name        = "armory-examples"
description = "Adversarial Robustness Test Bed Examples"
readme      = "README.md"
dynamic     = [ "version" ]
license     = "MIT"
authors = [
    { name = "Two Six Technologies", email = "armory@twosixtech.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "charmory @ {root:uri}/../",
    "pytorch-lightning"
]

[project.scripts]
charmory = "charmory_examples.cifar_example:main"

[project.optional-dependencies]
developer =[
    "hatch",  # build tool
    "wheel",  # build tool
    "black",
    "isort",
    "flake8",
]

jatic = [
    "jatic_toolbox @ git+ssh://git@gitlab.jatic.net/jatic/cdao/jatic-toolbox.git@v0.2.0rc1",
    # HuggingFace
    "datasets",
    "huggingface_hub",
    "transformers",
]

all = [
    "armory-examples[developer]",
    "armory-examples[jatic]",
]

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.10.0",
  "hatch-vcs",
]

[tool.hatch.build]
ignore-vcs   = false
reproducible = true
directory    = "dist"
sources      = [ "src" ]
include = [
  "LICENSE",
  "pyproject.toml",
  "README.md"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
path   = "src/charmory_examples/version.py"

[tool.hatch.version.raw-options]
root           = "../"
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "src/charmory_examples/version.py"
template = """
# coding: utf-8
# File automatically generated by setuptools_scm.
# Do not change or track in version control.
__version__ = {version!r}
version_tuple = {version_tuple!r}
"""

[tool.setuptools_scm]
# the presence of this empty block stops setuptools_scm from complaining

[tool.isort]
profile = "black"
force_sort_within_sections = true
