[project]
requires-python = ">=3.8"

name = "armory-examples"
description = "TwoSix Armory Adversarial Robustness Library Examples"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
authors = [{ name = "Two Six Technologies", email = "armory@twosixtech.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "albumentations",
    "armory-library",
]

[project.optional-dependencies]
huggingface = [
    "datasets",
    "huggingface_hub",
    "transformers",
]

# pypi will not accept this dependency because it is not a public repo therefore I'm
# just pulling it for at least the time needed to publish armory-examples thus aquiring
# the package name
#
# jatic = [ "jatic_toolbox @
#     git+ssh://git@gitlab.jatic.net/jatic/cdao/jatic-toolbox.git@v0.2.0rc1", ]

yolo = [
    "yolov5",
]

demo = ["pandas", "sklearn", "plotly", "numpy", "matplotlib", "seaborn"]

all = [
    "armory-examples[huggingface]",
    "armory-examples[jatic]",
    "armory-examples[yolo]",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml", "README.md"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
path = "src/armory/examples/version.py"

[tool.hatch.version.raw-options]
root = "../"
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "src/armory/examples/version.py"
template = """
# coding: utf-8
# File automatically generated by setuptools_scm.
# Do not change or track in version control.
__version__ = {version!r}
version_tuple = {version_tuple!r}
"""

[tool.setuptools_scm]
# the presence of this empty block stops setuptools_scm from complaining

[tool.isort]
profile = "black"
force_sort_within_sections = true
