[project]
requires-python = ">=3.8"

name = "armory-examples"
description = "TwoSix Armory Adversarial Robustness Library Examples"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
authors = [{ name = "Two Six Technologies", email = "armory@twosixtech.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "armory-library",
    "adversarial-robustness-toolbox",
    "datasets",
    "huggingface_hub",
    "rich",
    "transformers",
]

[project.optional-dependencies]
# Dependencies for computer vision examples
cv = [
    # 1.4.1 adds version constraints to scikit-learn and numpy that are incompatible with ART
    "albumentations<1.4.1",
    "captum",
    "scikit-learn>=1.2", # required by xaitk-saliency
    "tidecv",
    "xaitk-saliency",
    "yolov5",
]

all = [
    "armory-examples[cv]",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.build]
ignore-vcs = false
reproducible = true
directory = "dist"
sources = ["src"]
include = ["src/", "LICENSE", "pyproject.toml", "README.md"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
path = "src/armory/examples/version.py"

[tool.hatch.version.raw-options]
root = "../"
version_scheme = "post-release"

[tool.hatch.build.hooks.vcs]
version-file = "src/armory/examples/version.py"
template = """
# coding: utf-8
# File automatically generated by setuptools_scm.
# Do not change or track in version control.
__version__ = {version!r}
version_tuple = {version_tuple!r}
"""

[tool.setuptools_scm]
# the presence of this empty block stops setuptools_scm from complaining

[tool.isort]
profile = "black"
force_sort_within_sections = true
